# MRFMat

./: CMakeLists.txt  README.md  mrfmat.h
heads/: mrfmat-intern.h
srcs/: init.c  intern.c
